feat(app): #3 add new terms on tranlation library

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -15,5 +15,7 @@
     "view": "View",
     "profile": "Profile",
     "management": "Management",
-    "changeLanguage": "Change language"
+    "changeLanguage": "Change language",
+    "open": "Open",
+    "close":"Close"
 }
