feat(app): #11 add terms to translation library

--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -17,5 +17,8 @@
     "management": "Management",
     "changeLanguage": "Changer la langue",
     "open": "Ouvrir",
-    "close":"Fermer"
+    "close":"Fermer",
+    "souscriptionCharts": "Détails des Inscriptions",
+    "months": "Mois",
+    "years": "Années"    
 }
