--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -17,5 +17,8 @@
     "management": "Management",
     "changeLanguage": "Change language",
     "open": "Open",
-    "close":"Close"
+    "close":"Close",
+    "souscriptionCharts": "Souscription details",
+    "months": "Months",
+    "years": "Years"    
 }
