feat(app): #11 add terms to translation library

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,5 +20,6 @@
     "close":"Close",
     "souscriptionCharts": "Souscription details",
     "months": "Months",
-    "years": "Years"    
+    "years": "Years",
+    "Administrator":"Administrator"
 }
