--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -20,5 +20,6 @@
     "close":"Fermer",
     "souscriptionCharts": "Détails des Inscriptions",
     "months": "Mois",
-    "years": "Années"    
+    "years": "Années",
+    "Administrator":"Administrateur"
 }
